Initial commit Start of backend and tests
